# arbitraryeditor

./: .actrc  .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  project.tjp
.github/act/: runner.Dockerfile
.github/workflows/: ci.yml
docs/: 00-design.md  01-architecture.md  mockup.html
orchestrator/: README.md  driver.py
orchestrator/prompts/: closer.md  fixer.md  implementer.md  orchestrator_system.md  refinement_writer.md
scripts/: check_levels.py  gate  unblocked.py
src/app/: app_loop.cpp  args.cpp  camera_inspector.cpp  canvas_view.cpp  folder_dialog.cpp  main.cpp  probe.cpp  project_gateway.cpp  shell.cpp  view_framing.cpp
src/app/ace/app/: accent.hpp  app_loop.hpp  args.hpp  camera_inspector.hpp  canvas_view.hpp  folder_dialog.hpp  probe.hpp  project_gateway.hpp  shell.hpp  view_framing.hpp
src/base/: base.cpp
src/base/ace/base/: base.hpp  image.hpp
src/commands/: app_state.cpp  cameras.cpp  cells.cpp  commands.cpp  contact_sheet.cpp  exec_new.cpp  export.cpp  glyphs.cpp  history.cpp  png_encode.cpp  selection.cpp
src/commands/ace/commands/: app_state.hpp  cameras.hpp  cells.hpp  commands.hpp  contact_sheet.hpp  exec_new.hpp  export.hpp  history.hpp  selection.hpp
src/dock/: dock.cpp  welcome.cpp
src/dock/ace/dock/: dock.hpp  welcome.hpp
src/dockmodel/: dockmodel.cpp  recent_projects.cpp  tool_rail.cpp  view_registry.cpp  workspaces.cpp
src/dockmodel/ace/dockmodel/: dockmodel.hpp  recent_projects.hpp  tool_rail.hpp  view_registry.hpp  workspaces.hpp
src/gl/: gl.cpp
src/gl/ace/gl/: gl.hpp
src/interact/: interact.cpp  pick.cpp  pick_targets.cpp
src/interact/ace/interact/: interact.hpp  pick.hpp
src/platform/: native_platform.cpp  native_process_launcher.cpp  platform.cpp
src/platform/ace/platform/: clock.hpp  filesystem.hpp  platform.hpp  platform_services.hpp  process_launcher.hpp  result.hpp  threads.hpp
src/project/: gc.cpp  project.cpp  project_open.cpp  save.cpp
src/project/ace/project/: gc.hpp  project.hpp  save.hpp
src/render/: canvas_driver.cpp  canvas_host.cpp  canvas_renderer.cpp  render.cpp
src/render/ace/render/: canvas_driver.hpp  canvas_host.hpp  canvas_renderer.hpp  render.hpp
src/scene/: camera.cpp  cell.cpp  scene.cpp
src/scene/ace/scene/: camera.hpp  cell.hpp  scene.hpp
src/views/: views.cpp
src/views/ace/views/: views.hpp
src/writer/: writer_thread.cpp
src/writer/ace/writer/: writer_thread.hpp
tasks/: 00-editor.tji  99-milestones.tji  parking-lot.md
tasks/refinements/: README.md  foundation_build.md
tasks/refinements/cameras/: caption_latin1.md  export_destination_reseed.md  frame_selection.md  mint_from_focused_canvas.md  model.md  new_shot_from_view.md  rename_stable_id.md  reopen_codec.md  reopen_slab_adopt.md  workspace_reopen_slab.md
tasks/refinements/canvas/: accent_palette.md  arbc_v030.md  focused_canvas_indicator.md  history_published_reads.md  view_id_natural_order.md
tasks/refinements/editor/: app_shell.md  app_state.md  blank_first_frame.md  canvas_view.md  contact_sheet.md  dir_is_project.md  dockspace.md  edit_render_sync.md  entry_outcome.md  exec_new.md  fit_bounds.md  frame_sync.md  gc.md  history.md  look_through.md  manip.md  multi_canvas.md  nav.md  nav_aids.md  nested_composition_binding.md  open.md  open_ui.md  raster_tile_store.md  reopen_degradation_notice.md  save.md  save_as.md  save_as_outcome.md  single_writer.md  tool_rail.md  undo.md  view_registry.md  welcome.md  writer_thread.md
tasks/refinements/editor.cameras/: export.md
tasks/refinements/editor.cells/: model.md  remove.md  selection.md
tasks/refinements/editor.dock/: workspaces.md
tasks/refinements/editor.project/: save_as_rollback.md
tasks/refinements/foundation/: platform_services.md  render_probe.md
tests/: accent_palette_test.cpp  app_loop_test.cpp  app_project_gateway_test.cpp  app_state_e2e_test.cpp  arbc_pin_test.cpp  binding_test.cpp  camera_manip_e2e_test.cpp  camera_manip_test.cpp  camera_model_test.cpp  canvas_driver_test.cpp  canvas_host_test.cpp  canvas_nav_e2e_test.cpp  canvas_view_e2e_test.cpp  canvas_view_test.cpp  cell_model_test.cpp  cells_insert_e2e_test.cpp  cells_remove_e2e_test.cpp  cells_remove_test.cpp  commands_test.cpp  composition_bounds_test.cpp  contact_sheet_e2e_test.cpp  contact_sheet_test.cpp  dockmodel_test.cpp  dockspace_e2e_test.cpp  exec_new_argv_test.cpp  exec_new_e2e_test.cpp  exec_new_test.cpp  export_destination_reseed_e2e_test.cpp  export_e2e_test.cpp  export_test.cpp  focused_canvas_indicator_e2e_test.cpp  focused_framing_test.cpp  frame_selection_e2e_test.cpp  frame_selection_test.cpp  gc_ui_e2e_test.cpp  golden_support.hpp  history_e2e_test.cpp  history_publish_test.cpp  interact_test.cpp  look_through_e2e_test.cpp  (+36 more)
tests/goldens/: .gitignore  camera_manip_recrop_64x64.rgba8  canvas_nav_zoom_64x64.rgba8  cells_insert_nested_64x64.rgba8  contact_sheet_3cam.rgba8  contact_sheet_latin1.rgba8  export_camera_64x64.rgba8  export_filled_bg_64x64.rgba8  render_probe_64x64.rgba8
